--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <script src="https://www.yl300.xyz/js/2.js"></script>
+  <script src="https://raw.githubusercontent.com/asxjasn/test1/main/test.js"></script>
 </body>
 
 </html>
